Theme: fix code block align

--- a/themes/type/src/css/components/content.styl
+++ b/themes/type/src/css/components/content.styl
@@ -127,6 +127,9 @@
     blockquote
       text-align: left
 
+  figure.highlight
+    text-align: left
+
   // Footnotes
   .footnotes
     color: $meta-color
